src/test/deca/context/valid/created/testInitVar/initBool.deca
// Description :
//    Test de l'initialisation de variables de type booléen
//
// Resultats :
//    Ok

{
    boolean x = true;
    boolean y = false;
    boolean z;
}
